--- a/CRUDFIREBASE/src/app/components/edit-hero/edit-hero.component.html
+++ b/CRUDFIREBASE/src/app/components/edit-hero/edit-hero.component.html
@@ -1,2 +1,73 @@
-<p>edit-hero works!</p>
+<!-- <router-outlet></router-outlet> -->
+<div class="container mt-4 animated fadeIn faster" *ngIf="!loading">
+  <div class="row">
+    <div class="col">
+      <h1>Hero <small> {{ hero.name }} </small></h1>
+      <hr>
+    </div>
+  </div>
+  <div class="row">
+      <div class="col text-right">
+        <button class="btn btn-primary pt-1 pb-1 pl-3 pr-3" [routerLink]="['/']" > <i class="fas fa-backward"></i>  Back</button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <form [formGroup]="_formGroup"
+        (ngSubmit)="submit(_formGroup)" >
+          <div class="form-group">
+            <label for="">Firebase ID</label>
+            <input
+            formControlName="id"
+            type="text" class="form-control" placeholder="Firebase ID"
+            >
+            <small>Este campo es autogenerado</small>
+          </div>
 
+          <div class="form-group">
+              <label>Nombre</label>
+              <input type="text"
+                formControlName="name"
+                class="form-control"
+                placeholder="Nombre de Heroe"
+                required
+              >
+          </div>
+          <div class="form-group">
+              <label>Poder</label>
+              <input type="text"
+              formControlName="power"
+                class="form-control"
+                placeholder="Poder del Heroe">
+          </div>
+          <div class="form-group">
+            <label for="">Estado</label>
+            <br>
+            <ng-container *ngIf="hero.status; else elseTemplate">
+              <button class="btn btn-outline-success w-50" type="button" (click)="hero.status=!hero.status">
+                <i class="fa fa-smile-wink"></i>
+                Vivo
+              </button>
+
+            </ng-container>
+            <ng-template #elseTemplate>
+              <button class="btn btn-outline-danger w-50" type="button" (click)="hero.status=!hero.status">
+                <i class="fa fa-dizzy"></i>
+                Muerto
+              </button>
+
+            </ng-template>
+
+          </div>
+          <hr>
+          <div class="form-group text-center">
+            <button type="submit" class="btn btn-primary w-25" [disabled]="!_formGroup.valid">
+              <i class="fa fa-save"></i>
+                <span class="ml-2">Actualizar</span>
+            </button>
+          </div>
+        </form>
+
+      </div>
+    </div>
+</div>
