--- a/MoviesApp/src/app/app.component.html
+++ b/MoviesApp/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark pt-3 pb-3">
-  <a class="navbar-brand" href="#">MoviesApp</a>
+  <a class="navbar-brand" [routerLink]="['/home']" routerLinkActive="active" >MoviesApp</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -8,10 +8,10 @@
     <ul class="navbar-nav mr-auto">
 
       <li class="nav-item">
-        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Home</a>
+        <a class="nav-link" [routerLink]="['/home']" routerLinkActive="active"  tabindex="-1" aria-disabled="true">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Search</a>
+        <a class="nav-link" [routerLink]="['/search']" routerLinkActive="active"  tabindex="-1" aria-disabled="true">Search</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -20,6 +20,7 @@
     </form>
   </div>
 </nav>
+
 
 <!-- <input placeholder="Search" #input> -->
 <router-outlet></router-outlet>
