--- a/MoviesApp/src/app/components/search/search.component.html
+++ b/MoviesApp/src/app/components/search/search.component.html
@@ -1,1 +1,16 @@
-<p>search works!</p>
+<div class="container">
+  <div class="row mt-5 mb-5">
+    <div class="col">
+        <input type="text" class="form-control" placeholder="busca a el artista" #input>
+    </div>
+  </div>
+
+
+  <div class="card-columns" *ngIf="movies.length">
+    <div class="card animated fadeIn fast" *ngFor="let movie of movies; let i = index">
+      <app-movie-card [movie]="movie"
+      ></app-movie-card>
+    </div>
+  </div>
+
+</div>
