test API Google Maps

--- a/GoogleMapsMaterial/src/app/app.component.html
+++ b/GoogleMapsMaterial/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="navbar">
+<!-- <mat-toolbar color="primary" class="navbar">
   <mat-toolbar-row class="navbar-row" >
     <span>Google Maps with Angular Material</span>
   </mat-toolbar-row>
@@ -7,4 +7,6 @@
 
 <div class="container">
 <h2 [ngStyle]="{'margin': '50px 0'}">Map</h2>
-</div>
+
+</app-mapa> -->
+<app-mapa></app-mapa>
