Google Maps Angular Material

--- a/GoogleMapsMaterial/src/app/app.component.html
+++ b/GoogleMapsMaterial/src/app/app.component.html
@@ -1,12 +1,13 @@
-<!-- <mat-toolbar color="primary" class="navbar">
+<mat-toolbar color="primary" class="navbar">
   <mat-toolbar-row class="navbar-row" >
     <span>Google Maps with Angular Material</span>
   </mat-toolbar-row>
 </mat-toolbar>
-<router-outlet></router-outlet>
 
 <div class="container">
-<h2 [ngStyle]="{'margin': '50px 0'}">Map</h2>
+  <h2 [ngStyle]="{'margin': '50px 0'}">Map</h2>
 
-</app-mapa> -->
-<app-mapa></app-mapa>
+  <app-mapa></app-mapa>
+</div>
+
+<router-outlet></router-outlet>
