--- a/GoogleMapsMaterial/src/app/components/mapa/mapa.component.html
+++ b/GoogleMapsMaterial/src/app/components/mapa/mapa.component.html
@@ -1,4 +1,4 @@
-<!-- <mat-card>
+<mat-card>
   <mat-card-content>
     <agm-map
       [latitude]="lat"
@@ -11,5 +11,5 @@
         >
     </agm-map>
   </mat-card-content>
-</mat-card> -->
-<div #mapContainer id="map"></div>
+</mat-card>
+<!-- <div #mapContainer id="map"></div> -->
