--- a/GoogleMapsMaterial/src/app/components/mapa/mapa.component.html
+++ b/GoogleMapsMaterial/src/app/components/mapa/mapa.component.html
@@ -9,6 +9,14 @@
       [longitude]="lng"
       ></agm-marker
         >
+        <agm-info-window>
+          <strong>Titulo</strong>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eveniet, adipisci fuga ut, itaque odit quam voluptates dicta nesciunt a cupiditate dolores tempore dignissimos ducimus corrupti at ab aspernatur nemo!</p>
+          <div class="">
+            <button mat-raised-button color="primary">Editar</button>
+            <button mat-raised-button color="warn">Borrar</button>
+          </div>
+        </agm-info-window>
     </agm-map>
   </mat-card-content>
 </mat-card>
