--- a/GoogleMapsMaterial/src/styles.scss
+++ b/GoogleMapsMaterial/src/styles.scss
@@ -30,3 +30,11 @@ $GoogleMapsMaterial-theme: mat-light-theme($GoogleMapsMaterial-primary, $GoogleM
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.basic-container {
+  padding: 30px;
+}
+.version-info {
+  font-size: 8pt;
+  float: right;
+}
+
