--- a/youtube-app/src/app/components/card/card.component.html
+++ b/youtube-app/src/app/components/card/card.component.html
@@ -4,7 +4,7 @@
     <h5 class="card-title">{{youthcard.snippet.title}}</h5>
     <!-- <p class="card-text">{{ youthcard.snippet.description }}</p> -->
     <button type="button" class="btn btn-outline-primary btn-block"
-      (click)="openModel()"
+      (click)="openModal()"
     >Ver Video</button>
   </div>
 </div>
@@ -13,15 +13,15 @@
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
-    <div class="modal-content">
+    <div class="modal-content" *ngIf="_video">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">{{youthcard.snippet.title}}</h5>
+        <h5 class="modal-title" id="exampleModalLabel">{{_video.snippet.title}}</h5>
       </div>
       <div class="modal-body">
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/HUH6l413VnU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="100%" height="315" [src]="_video.snippet.resourceId.videoId | youth : 'https://www.youtube.com/embed/'" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" (click)="closeVideo()">Close</button>
       </div>
     </div>
   </div>
