--- a/youtube-app/src/app/components/home/home.component.html
+++ b/youtube-app/src/app/components/home/home.component.html
@@ -5,3 +5,8 @@
     <app-card *ngFor="let video of videos" [youthcard]="video"></app-card>
   </div>
 </div>
+
+
+<button type="button" class="btn btn-outline-primary btn-block"
+  (click)="cargarMas()"
+>Cargar mas videos ...</button>
