--- a/youtube-app/src/app/components/card/card.component.html
+++ b/youtube-app/src/app/components/card/card.component.html
@@ -11,7 +11,10 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"
+data-backdrop="static"
+data-keyboard="false"
+>
   <div class="modal-dialog" role="document">
     <div class="modal-content" *ngIf="_video">
       <div class="modal-header">
