--- a/youtube-app/src/app/components/card/card.component.html
+++ b/youtube-app/src/app/components/card/card.component.html
@@ -4,7 +4,7 @@
     <h5 class="card-title">{{youthcard.snippet.title}}</h5>
     <!-- <p class="card-text">{{ youthcard.snippet.description }}</p> -->
     <button type="button" class="btn btn-outline-primary btn-block"
-      (click)="openModal()"
+      (click)="openModal(youthcard)"
     >Ver Video</button>
   </div>
 </div>
