--- a/fileupload-firebase/src/app/components/upload/upload.component.html
+++ b/fileupload-firebase/src/app/components/upload/upload.component.html
@@ -1,1 +1,39 @@
-<p>upload works!</p>
+<div class="row">
+  <div class="col-md-4">
+    <h3>Seleccione archivos</h3>
+    <div appNgDropFiles
+        (mouseUp)="dropUp = $event"
+        [ngClass]="{'file-over': dropUp}" class="well drop-zone">
+      <h4>Arraste aquí los archivos</h4>
+      <img src="assets/img/drop-images.png" alt="">
+    </div>
+  </div>
+  <div class="col-md-8">
+
+    <h4>Cargar archivos</h4>
+    <button class="btn btn-success mr-2" (click)="loadImages()">Cargar a Firebase</button>
+    <button class="btn btn-danger">Limpiar</button>
+
+    <table [ngStyle]="{'margin-top': '1em'}" class="table">
+      <thead class="thead-light">
+        <tr>
+          <th>Nombre</th>
+          <th>Tamaño</th>
+          <th>Progreso</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <td>xys</td>
+          <td>12MB</td>
+          <td>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 25%"></div>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
