--- a/fileupload-firebase/src/app/components/card/card.component.html
+++ b/fileupload-firebase/src/app/components/card/card.component.html
@@ -1,1 +1,6 @@
-<p>card works!</p>
+<div class="card">
+  <img class="card-img-top" [src]="image.url" alt="">
+  <div class="card-body">
+      <h4 class="card-title">{{ image.name }}</h4>
+  </div>
+</div>
