--- a/dynamic-graphics/src/app/components/lines/lines.component.html
+++ b/dynamic-graphics/src/app/components/lines/lines.component.html
@@ -1,1 +1,31 @@
-<p>lines works!</p>
+<div class="flex">
+  <div class="flex-item">
+    <div class="row">
+      <div class="col-md-6">
+        <div style="display: block;">
+          <canvas baseChart
+          [datasets]="lineChartData"
+          [labels]="lineChartLabels"
+          [options]="lineChartOptions"
+          [colors]="lineChartColors"
+          [legend]="lineChartLegend"
+          [chartType]="lineChartType"
+          (chartHover)="chartHovered($event)"
+          (chartClick)="chartClicked($event)"></canvas>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <table class="table table-responsive table-condensed">
+          <tr>
+            <th *ngFor="let label of lineChartLabels">{{label}}</th>
+          </tr>
+          <tr *ngFor="let d of lineChartData; let i=index" [class]="'line-'+i">
+            <td *ngFor="let label of lineChartLabels; let j=index">{{d && d.data[j]}}</td>
+          </tr>
+          <button  class="btn btn-outline-primary mr-4" (click)="randomize()">Randomize</button>
+          <button class="btn btn-outline-primary" (click)="pushOne()">Push</button>
+        </table>
+      </div>
+  </div>
+</div>
+</div>
