--- a/dynamic-graphics/src/app/components/doughnut/doughnut.component.html
+++ b/dynamic-graphics/src/app/components/doughnut/doughnut.component.html
@@ -1,1 +1,15 @@
-<p>doughnut works!</p>
+<div class="flex">
+  <div class="flex-item">
+    <div class="row">
+      <div class="col-md-10">
+        <div style="display: block;">
+          <canvas baseChart
+          [data]="doughnutChartData"
+          [labels]="doughnutChartLabels"
+          [chartType]="doughnutChartType">
+        </canvas>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
