--- a/virtual-scroll-and-drag-drop/src/app/components/navbar/navbar.component.html
+++ b/virtual-scroll-and-drag-drop/src/app/components/navbar/navbar.component.html
@@ -12,6 +12,9 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['drag-and-drop']">Drag And Drop</a>
       </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['countries']">Countries Drag And Drop</a>
+      </li>
 
     </ul>
   </div>
